# nine_inches_of_git_hooks

./: .gitignore  README.md  constants.py  install.sh  nine_inches_of_git_hooks.py  phonetic_data.py  phonetic_tts.py  pyproject.toml  requirements.txt  simple_chatterbox_test.py  test_audio.py  test_audio.txt  test_chatterbox.py  test_commit.txt  test_nine_inches.py  test_phonetic_tts.py  test_tts_engine.py  test_voice.py  tts_engine.py
